# ufs-weather-model

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .shellcheckrc  CCPP.appBuilder  CCPP_ref_trans.appBuilder  CCPP_repro.appBuilder  CCPP_static_trans.appBuilder  CMakeLists.txt  CMakeLists.txt.good_for_coupled  CODEOWNERS  Dockerfile  LICENSE.md  README.md  README_HWRF_PHYSICS.txt  README_feature-transition-to-capgen-1.txt  build.sh  cheyenne_gnu_fms_mpp_util_mpi_inc.patch  coupledFV3_WW3.appBuilder  coupledFV3_WW3.appBuilder.mk  coupledFV3_WW3_32bit.appBuilder  create_tmp_baseline.sh  fms_files.cmake  genCCPP.sh  newcontent  parse_tests.py  rt.test  rt_auto.py  rt_auto.py.old  rt_auto.sh  rt_auto.yml  setvars  standaloneFV3.appBuilder  standaloneFV3_repro.appBuilder  test
CDEPS-interface/: CMakeLists.txt  cdeps_files.cmake
CDEPS-interface/ufs/: shr_infnan_mod.F90
CDEPS-interface/ufs/cdeps_share/: dtypes.h  shr_assert_mod.F90  shr_frz_mod.F90  shr_infnan_mod.F90  shr_is_restart_fh_mod.F90
CICE-interface/: CMakeLists.txt  cice_files.cmake
CMEPS-interface/: CMakeLists.txt
HYCOM-interface/: CMakeLists.txt  hycom_files.cmake
LM4-interface/: CMakeLists.txt  lm4_src_files.cmake
LndCompTest/: CMakeLists.txt  field_print_debug.F90  import_2_export_test.F90  import_fields.F90  lnd_comp_nuopc.F90  lnd_comp_nuopc.F90.bk  lnd_import_export.F90  noah_driver.F90  sfc_drv_loop.F90
MOM6-interface/: CMakeLists.txt  CMakeLists.txt.good_for_Coupled  CMakeLists.txt.good_for_DATM  CMakeLists.txt.pjp2  CMakeLists.txt.stoch  CMakeLists.txt.stoch2  mom6_files.cmake
NOAHMP-interface/: CMakeLists.txt  noahmp_files.cmake
ccpp/: CMakeLists.txt  build_ccpp.sh  set_compilers.sh
ccpp/config/: ccpp_prebuild_config.py
ccpp/framework/: .codecov.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  README_TODO.txt
ccpp/framework/cmake/: add_sources.cmake  code_coverage.cmake  detect_openmp.cmake  export_dynamic.cmake
ccpp/framework/doc/: CMakeLists.txt  Doxyfile.in
ccpp/framework/examples/: README.txt  scheme.xsd  suite_EXAMPLE.xml  suite_FV3_test.xml  suite_GFS_operational_2017.xml  suite_scm_GFS_test.xml
ccpp/framework/schemes/: CMakeLists.txt
ccpp/framework/scripts/: ccpp_prebuild.py  ccpp_prebuild_config_FV3v0.py  ccpp_prebuild_config_FV3v1.py  ccpp_prebuild_config_SCM.py  common.py  metadata_parser.py  mkcap.py  mkdoc.py
ccpp/framework/src/: CMakeLists.txt  ccpp.F90  ccpp_api.F90  ccpp_dl.F90  ccpp_dl.c  ccpp_dl.h  ccpp_errors.F90  ccpp_fcall.F90  ccpp_fields.F90  ccpp_fields_idx.c  ccpp_fields_idx.h  ccpp_memory.F90  ccpp_memory.c  ccpp_memory.h  ccpp_strings.F90  ccpp_suite.F90  ccpp_types.F90  ccpp_utils.c  ccpp_utils.h  ccpp_xml.F90  ccpp_xml.c  ccpp_xml.h
ccpp/physics/: CMakeLists.txt  README.md  input.nml  makefile  pgifix.py
ccpp/physics/GFS_layer/: GFS_abstraction_layer.F90  GFS_diagnostics.F90  GFS_driver.F90  GFS_finalize_scm.F90  GFS_initialize_scm.F90  GFS_physics_driver.F90  GFS_radiation_driver.F90  GFS_restart.F90  GFS_typedefs.F90
ccpp/physics/IPD_layer/: IPD_CCPP_driver.F90  IPD_driver.F90  IPD_driver_cap.F90  IPD_typedefs.F90  scheme.xml
ccpp/physics/physics/: FV3_test.F90  GFDL_parse_tracers.F90  GFS_DCNV_generic.f90  GFS_MP_generic_post.f90  GFS_MP_generic_pre.f90  GFS_PBL_generic.f90  GFS_SCNV_generic.f90  GFS_calpreciptype.f90  GFS_debug.F90  GFS_phys_time_vary.fv3.f90  GFS_phys_time_vary.scm.f90  GFS_rad_time_vary.fv3.f90  GFS_rad_time_vary.scm.f90  GFS_radupdate.f90  GFS_rrtmg_post.F90  GFS_rrtmg_pre.F90  GFS_stochastics.f90  GFS_suite_interstitial.ccpp.F90  GFS_suite_interstitial.ipd.F90  GFS_surface_generic.f90  GFS_surface_loop_control.f  GFS_zhao_carr_pre.f90  aer_cloud.F  cldwat2m_micro.F  cnvc90.f  date_def.f  dcyc2.f  funcphys.f90  gcycle.f90  get_prs_fv3.f90  gfs_phy_tracer_config.f  gocart_tracer_config_stub.f  gscond.f  gwdc.f  gwdps.f  h2o_def.f  h2ointerp.f90  iounitdef.f  machine.F  memcheck.F90  (+47 more)
ccpp/suites/: suite.xsd  suite_FV3_CPT_v0.xml  suite_FV3_GFS_2017.xml  suite_FV3_GFS_2017_csawmg.xml  suite_FV3_GFS_2017_csawmgshoc.xml  suite_FV3_GFS_2017_gf_thompson.xml  suite_FV3_GFS_2017_gfdlmp.xml  suite_FV3_GFS_2017_gfdlmp_gwd.xml  suite_FV3_GFS_2017_gfdlmp_regional.xml  suite_FV3_GFS_2017_gfdlmp_regional_c768.xml  suite_FV3_GFS_2017_h2ophys.xml  suite_FV3_GFS_2017_ntiedtke.xml  suite_FV3_GFS_2017_ozphys_2015.xml  suite_FV3_GFS_2017_satmedmf.xml  suite_FV3_GFS_2017_shinhong.xml  suite_FV3_GFS_2017_stretched.xml  suite_FV3_GFS_2017_thompson_mynn.xml  suite_FV3_GFS_2017_ysu.xml  suite_FV3_GFS_rasmgshoc.xml  suite_FV3_GFS_v15.xml  suite_FV3_GFS_v15_gf.xml  suite_FV3_GFS_v15_gf_thompson.xml  suite_FV3_GFS_v15_mynn.xml  suite_FV3_GFS_v15_thompson.xml  suite_FV3_GFS_v15_thompson_mynn.xml  suite_FV3_GFS_v15plus.xml  suite_FV3_GSD_noah.xml  suite_FV3_GSD_v0.xml
cmake/: GNU.cmake  (+32 more)
stochastic_physics/: .travis.yml  CMakeLists.txt  CODEOWNERS  Doxyfile  LICENSE.md  README.md  README.standalone  cellular_automata_global.F90  cellular_automata_sgs.F90  compns_stochy.F90  function2  function_indlsev  function_indlsod  get_stochy_pattern.F90  halo_exchange.fv3.F90  kinddef.F90  lndp_apply_perts.F90  main.doc  makefile  mersenne_twister.F90  mpi_wrapper.F90  plumes.F90  random_numbers.F90  spectral_transforms.F90  stochastic_physics.F90  stochy_data_mod.F90  stochy_doc.conf  stochy_internal_state_mod.F90  stochy_namelist_def.F90  stochy_patterngenerator.F90  update_ca.F90
stochastic_physics/docs/: environment.yml
stochastic_physics/unit_tests/: atmosphere_stub.F90  compare_ca_output.F90  compare_output.F90  compile_compare.sh  compile_compare_ca.sh  compile_standalone.hera_gnu  compile_standalone.hera_intel  compile_standalone_ca.hera.gnu  compile_standalone_ca.hera.intel  fv_arrays_stub.F90  fv_control_stub.F90  fv_mp_stub_mod.F90  input.nml.ca_template  input.nml.lnd1  input.nml.noise  input.nml.template  module-setup.sh  modules.hera.intel  modules.orion.intel  modules.stoch  modules.stoch_gnu  modules.stoch_gnu_dbg  run_ca.sh  run_standalone.sh  run_unit_tests.sh  run_unit_tests_ca.sh  standalone_ca.F90  standalone_stochy.F90
(+2384 files in other folders)
